# gglinedensity

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE.html  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  configure  configure.win  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  update_authors.R
R/: 000-wrappers.R  StatLineDensity.R  StatPathDensity.R  internal.R  stat_line_density.R  test.R  util.R
inst/: AUTHORS
man/: gglinedensity-package.Rd  stat_line_density.Rd
news/: index.html  index.md
reference/: StatLineDensity.html  gglinedensity-package.html  gglinedensity-package.md  index.html  index.md  stat_line_density.html  stat_line_density.md
src/: .gitignore  Makevars.in  Makevars.win.in  gglinedensity-win.def  init.c
src/rust/: Cargo.toml  api.h  vendor.sh  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-stat_line_density.R
tools/: configure.R
