[package]
name = "gglinedensity"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
savvy = "0.8.10"
imageproc = { version = "0.25", default-features = false }
image = { version = "0.25.6", default-features = false }

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery.
#
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
#
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"
